css/style.css
/*
Colors used:
Primary Color (Gray): #F5F3F3;
Secondary Color (Pale Blue): #7A4AED; Dark Blue 31117F

*/
* {
  box-sizing: border-box;
}
body{
  background-color: #ffffff;
  font-family: 'Oswald', sans-serif;
  font-size: 18px; /* Sets the font size to 16px */
  font-weight: 300; /* Sets the font weight to 300 */
  line-height: 1.6; /* Sets the line-height to 1.6 * the font-size */
  color: #000000;
}
img {
  width: 100%;
}
a {
  color: #3940FF;
  text-decoration: none; /* No underlining */
}
a:hover {
  color: white;
  text-decoration: underline; /* Underlining when hovering over a link */
}
a:hover,
a:focus {
  color: #371FAB;
  text-decoration: underline;
}
.button {
  display: inline-block;
  background-color: #2F3136;
  color: #FFFFFF;
  font-weight: 400;
  text-decoration: none;
  padding: 10px;
  border-radius: 1.5px;
  border-bottom: 2px solid #4A4848;
  transition-duration: 0.2s;
  transition-property: opacity;
}
.button:hover {
  opacity: 0.8;/* Reduces the opacity of the button to 80% */
  text-decoration: none;
}
.buttoncontact{
  background-color: #6C6C6C;
  color: #ffffff;
  text-transform: uppercase;
  border: 2px solid #6C6C6C;
  padding: 10px
}
.buttoncontact:hover
.buttoncontact:focus{
  color: #000000
}

/* Layout Styling*/
.container {
  padding: 0 15px;
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
}
.row {
  margin: 25px 0; /* 25px top and bottom, 0 left and right */
}
.row::after {
  content: "";
  clear: both;
  display: table;
}
#work .row { padding-bottom: 25px; border-bottom: 1px solid #4a4a4a; }
#hero h1 {
  text-align: center; /* Centers text */
}
.logo {
  max-width: 100px;
}
header {
  background-color: #ffffff;
  text-align: center;
  padding: 10px 0;
  box-shadow: 0px 10px 5px 0px rgba(50, 50, 50, 0.75);
  position: relative
}
nav > ul {
  list-style-type: none;
  padding: 0;
}
nav > ul > li {
  display: inline-block;
}
nav > ul > li > a {
  padding: 0 15px;
  text-transform: uppercase;
  font-weight: 700;
  color: #4a4a4a;
}
  a:visited{
  color:#440678
}
#hero {
  background-color: #ffffff;
  padding: 20px 0;
  display: inline-block;
  width: 100%;
}

}
#hero span {
  display: block;
}

[class*="col-"] {
  float: left;
  padding: 10px
}
.centerMe{
  text-align: center;
}

/* Media Queries */
/* ==============================
Medium devices (640px and larger)
================================= */
@media only screen and (min-width: 640px) {
  header {
    text-align: unset;
    padding: 20px 0 13px;
  }

  nav {
    width: auto;
    float: right;
    margin-top: 4px;
  }
  /*medium col*/
  .col-md-6 {
    width: 50%;
  }
  .col-md-12 {
    width: 100%;
  }
.berlin-illustration{
  width: 100%;
max-width: 100%;
height: auto;
}
@keyframes color-change {
  from {fill: #edc655;}
  to {fill: #f76414;}
}
.sun{
  animation-duration: 4s;
  animation-name: color-change;
  animation-iteration-count: infinite;
  animation-direction: alternate;
  animation-timing-function: linear;
}
@keyframes cloud-move {
  from {transform: translate(0,50px);}
  to {transform: translate(200px,50px);}
}
.cloud-front {
  animation: 30s cloud-move infinite alternate linear;
}
@keyframes cloud-move-reverse {
  from {transform: translate(446px,48px);}
  to {transform: translate(100px, 48px);}
}
.cloud-back {
  animation: 34s cloud-move-reverse infinite alternate linear;
}

  /* ==============================
Large devices (1024px or larger)
================================= */
@media only screen and (min-width: 1440px) {
  .col-lg-5{
    width: 40%;
  }
    .col-lg-7{
      width: 60%
    }
}


/* ==============================
X-large devices (1440px or larger)
================================= */
@media only screen and (min-width: 1440px) {
}

